Source/LEDscript2/parser/Sili.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Sili.java */
package LEDscript2.parser;

public class Sili/*@bgen(jjtree)*/implements SiliTreeConstants, SiliConstants {/*@bgen(jjtree)*/
  protected JJTSiliState jjtree = new JJTSiliState();

/***********************************************
 *          THE GRAMMAR STARTS HERE            *
 ***********************************************/
  final public ASTCode code() throws ParseException {
 /*@bgen(jjtree) Code */
  ASTCode jjtn000 = new ASTCode(JJTCODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      statement();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case FOR:
        case WRITE:
        case FN:
        case COLOUR:
        case INT:
        case BRIGHTEN:
        case DARKEN:
        case FLIP:
        case MULTIPLY:
        case DIVIDE:
        case DELAY:
        case CLEAR:
        case FILL:
        case UPDATE:
        case INFO:
        case LEDS:
        case SAVE:
        case IDENTIFIER:
        case LBRACE:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        statement();
      }
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void statement() throws ParseException {
 /*@bgen(jjtree) Statement */
  ASTStatement jjtn000 = new ASTStatement(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(2)) {
        assignment();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FN:
          fndef();
          break;
        case LBRACE:
          block();
          break;
        case IF:
          ifstatement();
          break;
        case FOR:
          forloop();
          break;
        case WRITE:
          write();
          break;
        case IDENTIFIER:
          call();
          break;
        case BRIGHTEN:
          addassign();
          break;
        case DARKEN:
          decassign();
          break;
        case FLIP:
          flipassign();
          break;
        case MULTIPLY:
          multiassign();
          break;
        case DIVIDE:
          divassign();
          break;
        case DELAY:
          delay();
          break;
        case CLEAR:
          clear();
          break;
        case FILL:
          fill();
          break;
        case UPDATE:
          update();
          break;
        case INFO:
          info();
          break;
        case LEDS:
          leds();
          break;
        case SAVE:
          save();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void block() throws ParseException {
 /*@bgen(jjtree) Block */
  ASTBlock jjtn000 = new ASTBlock(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LBRACE);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case FOR:
        case WRITE:
        case FN:
        case COLOUR:
        case INT:
        case BRIGHTEN:
        case DARKEN:
        case FLIP:
        case MULTIPLY:
        case DIVIDE:
        case DELAY:
        case CLEAR:
        case FILL:
        case UPDATE:
        case INFO:
        case LEDS:
        case SAVE:
        case IDENTIFIER:
        case LBRACE:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        statement();
      }
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void parmlist() throws ParseException {
 /*@bgen(jjtree) Parmlist */
  ASTParmlist jjtn000 = new ASTParmlist(JJTPARMLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        identifier();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_3;
          }
          jj_consume_token(COMMA);
          identifier();
        }
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void fnbody() throws ParseException {
 /*@bgen(jjtree) FnBody */
  ASTFnBody jjtn000 = new ASTFnBody(JJTFNBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case FOR:
        case WRITE:
        case FN:
        case COLOUR:
        case INT:
        case BRIGHTEN:
        case DARKEN:
        case FLIP:
        case MULTIPLY:
        case DIVIDE:
        case DELAY:
        case CLEAR:
        case FILL:
        case UPDATE:
        case INFO:
        case LEDS:
        case SAVE:
        case IDENTIFIER:
        case LBRACE:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_4;
        }
        statement();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void fndef() throws ParseException {
 /*@bgen(jjtree) FnDef */
  ASTFnDef jjtn000 = new ASTFnDef(JJTFNDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FN);
      identifier();
      parmlist();
      jj_consume_token(LBRACE);
      fnbody();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RETURN:
        jj_consume_token(RETURN);
        returnexpr();
      jjtn000.fnHasReturn = true;
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void returnexpr() throws ParseException {
 /*@bgen(jjtree) ReturnExpression */
  ASTReturnExpression jjtn000 = new ASTReturnExpression(JJTRETURNEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void assignment() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COLOUR:
      jj_consume_token(COLOUR);
      jj_consume_token(LPAREN);
      identifier();
      jj_consume_token(ASSIGN);
      expression();
                                                 ASTAssignment jjtn001 = new ASTAssignment(JJTASSIGNMENT);
                                                 boolean jjtc001 = true;
                                                 jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(SEMICOLON);
      } finally {
                                                 if (jjtc001) {
                                                   jjtree.closeNodeScope(jjtn001,  2);
                                                 }
      }
      identifier();
      jj_consume_token(ASSIGN);
      expression();
                                ASTAssignment jjtn002 = new ASTAssignment(JJTASSIGNMENT);
                                boolean jjtc002 = true;
                                jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(SEMICOLON);
      } finally {
                                if (jjtc002) {
                                  jjtree.closeNodeScope(jjtn002,  2);
                                }
      }
      identifier();
      jj_consume_token(ASSIGN);
      expression();
                                ASTAssignment jjtn003 = new ASTAssignment(JJTASSIGNMENT);
                                boolean jjtc003 = true;
                                jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(RPAREN);
      } finally {
                                if (jjtc003) {
                                  jjtree.closeNodeScope(jjtn003,  2);
                                }
      }
      jj_consume_token(SEMICOLON);
      break;
    case INT:
      jj_consume_token(INT);
      identifier();
      jj_consume_token(ASSIGN);
                             ASTAssignment jjtn004 = new ASTAssignment(JJTASSIGNMENT);
                             boolean jjtc004 = true;
                             jjtree.openNodeScope(jjtn004);
      try {
        expression();
      } catch (Throwable jjte004) {
                             if (jjtc004) {
                               jjtree.clearNodeScope(jjtn004);
                               jjtc004 = false;
                             } else {
                               jjtree.popNode();
                             }
                             if (jjte004 instanceof RuntimeException) {
                               {if (true) throw (RuntimeException)jjte004;}
                             }
                             if (jjte004 instanceof ParseException) {
                               {if (true) throw (ParseException)jjte004;}
                             }
                             {if (true) throw (Error)jjte004;}
      } finally {
                             if (jjtc004) {
                               jjtree.closeNodeScope(jjtn004,  2);
                             }
      }
      jj_consume_token(SEMICOLON);
      break;
    case IDENTIFIER:
      identifier();
      jj_consume_token(ASSIGN);
                     ASTAssignment jjtn005 = new ASTAssignment(JJTASSIGNMENT);
                     boolean jjtc005 = true;
                     jjtree.openNodeScope(jjtn005);
      try {
        expression();
      } catch (Throwable jjte005) {
                     if (jjtc005) {
                       jjtree.clearNodeScope(jjtn005);
                       jjtc005 = false;
                     } else {
                       jjtree.popNode();
                     }
                     if (jjte005 instanceof RuntimeException) {
                       {if (true) throw (RuntimeException)jjte005;}
                     }
                     if (jjte005 instanceof ParseException) {
                       {if (true) throw (ParseException)jjte005;}
                     }
                     {if (true) throw (Error)jjte005;}
      } finally {
                     if (jjtc005) {
                       jjtree.closeNodeScope(jjtn005,  2);
                     }
      }
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//NUMBER MODIFICATION
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
  final public void addassign() throws ParseException {
    jj_consume_token(BRIGHTEN);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
    case TRUE:
    case FALSE:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case LPAREN:
    case PLUS:
    case SUBT:
      mul_expression();
      jj_consume_token(COMMA);
                           ASTAddassign jjtn001 = new ASTAddassign(JJTADDASSIGN);
                           boolean jjtc001 = true;
                           jjtree.openNodeScope(jjtn001);
      try {
        expression();
      } catch (Throwable jjte001) {
                           if (jjtc001) {
                             jjtree.clearNodeScope(jjtn001);
                             jjtc001 = false;
                           } else {
                             jjtree.popNode();
                           }
                           if (jjte001 instanceof RuntimeException) {
                             {if (true) throw (RuntimeException)jjte001;}
                           }
                           if (jjte001 instanceof ParseException) {
                             {if (true) throw (ParseException)jjte001;}
                           }
                           {if (true) throw (Error)jjte001;}
      } finally {
                           if (jjtc001) {
                             jjtree.closeNodeScope(jjtn001,  2);
                           }
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_5;
        }
        jj_consume_token(SEMICOLON);
        mul_expression();
        jj_consume_token(COMMA);
                               ASTAddassign jjtn002 = new ASTAddassign(JJTADDASSIGN);
                               boolean jjtc002 = true;
                               jjtree.openNodeScope(jjtn002);
        try {
          expression();
        } catch (Throwable jjte002) {
                               if (jjtc002) {
                                 jjtree.clearNodeScope(jjtn002);
                                 jjtc002 = false;
                               } else {
                                 jjtree.popNode();
                               }
                               if (jjte002 instanceof RuntimeException) {
                                 {if (true) throw (RuntimeException)jjte002;}
                               }
                               if (jjte002 instanceof ParseException) {
                                 {if (true) throw (ParseException)jjte002;}
                               }
                               {if (true) throw (Error)jjte002;}
        } finally {
                               if (jjtc002) {
                                 jjtree.closeNodeScope(jjtn002,  2);
                               }
        }
        jj_consume_token(SEMICOLON);
        mul_expression();
        jj_consume_token(COMMA);
                             ASTAddassign jjtn003 = new ASTAddassign(JJTADDASSIGN);
                             boolean jjtc003 = true;
                             jjtree.openNodeScope(jjtn003);
        try {
          expression();
        } catch (Throwable jjte003) {
                             if (jjtc003) {
                               jjtree.clearNodeScope(jjtn003);
                               jjtc003 = false;
                             } else {
                               jjtree.popNode();
                             }
                             if (jjte003 instanceof RuntimeException) {
                               {if (true) throw (RuntimeException)jjte003;}
                             }
                             if (jjte003 instanceof ParseException) {
                               {if (true) throw (ParseException)jjte003;}
                             }
                             {if (true) throw (Error)jjte003;}
        } finally {
                             if (jjtc003) {
                               jjtree.closeNodeScope(jjtn003,  2);
                             }
        }
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
  }

  final public void decassign() throws ParseException {
    jj_consume_token(DARKEN);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
    case TRUE:
    case FALSE:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case LPAREN:
    case PLUS:
    case SUBT:
      mul_expression();
      jj_consume_token(COMMA);
                           ASTDecassign jjtn001 = new ASTDecassign(JJTDECASSIGN);
                           boolean jjtc001 = true;
                           jjtree.openNodeScope(jjtn001);
      try {
        expression();
      } catch (Throwable jjte001) {
                           if (jjtc001) {
                             jjtree.clearNodeScope(jjtn001);
                             jjtc001 = false;
                           } else {
                             jjtree.popNode();
                           }
                           if (jjte001 instanceof RuntimeException) {
                             {if (true) throw (RuntimeException)jjte001;}
                           }
                           if (jjte001 instanceof ParseException) {
                             {if (true) throw (ParseException)jjte001;}
                           }
                           {if (true) throw (Error)jjte001;}
      } finally {
                           if (jjtc001) {
                             jjtree.closeNodeScope(jjtn001,  2);
                           }
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_6;
        }
        jj_consume_token(SEMICOLON);
        mul_expression();
        jj_consume_token(COMMA);
                               ASTDecassign jjtn002 = new ASTDecassign(JJTDECASSIGN);
                               boolean jjtc002 = true;
                               jjtree.openNodeScope(jjtn002);
        try {
          expression();
        } catch (Throwable jjte002) {
                               if (jjtc002) {
                                 jjtree.clearNodeScope(jjtn002);
                                 jjtc002 = false;
                               } else {
                                 jjtree.popNode();
                               }
                               if (jjte002 instanceof RuntimeException) {
                                 {if (true) throw (RuntimeException)jjte002;}
                               }
                               if (jjte002 instanceof ParseException) {
                                 {if (true) throw (ParseException)jjte002;}
                               }
                               {if (true) throw (Error)jjte002;}
        } finally {
                               if (jjtc002) {
                                 jjtree.closeNodeScope(jjtn002,  2);
                               }
        }
        jj_consume_token(SEMICOLON);
        mul_expression();
        jj_consume_token(COMMA);
                             ASTDecassign jjtn003 = new ASTDecassign(JJTDECASSIGN);
                             boolean jjtc003 = true;
                             jjtree.openNodeScope(jjtn003);
        try {
          expression();
        } catch (Throwable jjte003) {
                             if (jjtc003) {
                               jjtree.clearNodeScope(jjtn003);
                               jjtc003 = false;
                             } else {
                               jjtree.popNode();
                             }
                             if (jjte003 instanceof RuntimeException) {
                               {if (true) throw (RuntimeException)jjte003;}
                             }
                             if (jjte003 instanceof ParseException) {
                               {if (true) throw (ParseException)jjte003;}
                             }
                             {if (true) throw (Error)jjte003;}
        } finally {
                             if (jjtc003) {
                               jjtree.closeNodeScope(jjtn003,  2);
                             }
        }
      }
